variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:8: error: too many arguments for method estSurOrange: ()Boolean
  } else (estSurOrange) {
                        ^